# zero2Prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20220109110807_create-subscriptions_table.sql  20220121003726_add_status_to_subscriptions.sql  20220121004528_make_status_not_null_in_subscriptions.sql  20220121004938_create_subscriptions_token_table.sql  20220202020656_create_users_table.sql  20220409121942_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
