[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = "0.11"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "=0.5.0-beta.9"
serde-aux = "3"
unicode-segmentation = "1.7.1"
validator = "0.14"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0.40"
thiserror = "1.0.24"
base64 = "0.13"
sha3 = "0.9"
argon2 = { version = "0.3", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10.1"
hex = "0.4"
time = "0.2"
actix-web-flash-messages = { version = "=0.3.0", features = ["cookies"] }
serde_json = "1"

[dependencies.actix-session]
git = "https://github.com/LukeMathWalker/actix-extras"
branch = "rework-actix-session"
features = ["redis-rs-tls-session"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", # Use actix as runtime for future w/ TLS backend
    "macros", # query! and query_as! macros
    "postgres", # provides postgres specific functionality
    "uuid", # support for mapping SQL UUIDs with type Uuid from uuid crate
    "chrono", # allows SQL timestamptz to be used with DateTime<T> from `chrono` crate
    "migrate", # be able to manage migrations programmatically
    "offline"
]

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"

################################################
# Configuration for adding an alternate linker #
################################################

# On Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang`
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# On MacOS, `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]